package app.domain.model;

import app.domain.shared.Constants;
import auth.AuthFacade;
import org.apache.commons.lang3.StringUtils;

/**
 * Class that represents an Specialist Doctor
 */
public class SpecialistDoctor extends Employee {

    private String DoctorIndexNumber;
    private Role role;
    private String name;
    private String address;
    private String phonenumber;
    private String email;
    private String SOC;
    private String employeeID;

    /**
     * Constructor of the Employee which is an subclass of Employee , it calls methods in order to validate the parameters
     *
     * @param employeeID        unique ID generated by the system for the Specialist Doctor
     * @param name              name of the Specialist Doctor
     * @param address           address of the Specialist Doctor
     * @param phonenumber       Phone number of the Specialist Doctor
     * @param email             email of the Employee
     * @param SOC               standard occupation code of the Specialist Doctor
     * @param DoctorIndexNumber Doctor Index Number of the Specialist Doctor
     * @param role              role of the Specialist Doctor
     */
    public SpecialistDoctor(String employeeID, String name, String address, String phonenumber, String email, String SOC, String DoctorIndexNumber, Role role) {
        super(employeeID, name, address, phonenumber, email, SOC, role);

        checkDoctorIndexNumberRules(DoctorIndexNumber);

        this.DoctorIndexNumber = DoctorIndexNumber;


    }

    /**
     * Checks if the string that is received meets the requirements of the Doctor Index Number, if not throws Exceptions
     *
     * @param DoctorIndexNumber Doctor Index Number of the client
     */
    private void checkDoctorIndexNumberRules(String DoctorIndexNumber) {
        if (StringUtils.isBlank(DoctorIndexNumber))
            throw new IllegalArgumentException("Doctor Index Number cannot be blank.");

        DoctorIndexNumber = DoctorIndexNumber.toLowerCase();
        char[] charArray = DoctorIndexNumber.toCharArray();
        for (int i = 0; i < charArray.length; i++) {
            char c = charArray[i];
            if (!(c >= '0' && c <= '9')) {
                throw new IllegalArgumentException("Doctor Index Number only accepts numbers");
            }
        }
    }

    /**
     * Adds a new user to the system with the role of the Specialist Doctor using the getPassword method to create the user's password
     *
     * @return a boolean value representing the success of the operation
     */

    @Override
    public boolean addUserWithRole(Company company) {
        boolean success = false;
        String password = PasswordGenerator.getPassword();
        AuthFacade authFacade = company.getAuthFacade();
        success = authFacade.addUserWithRole(this.name, this.email, password, Constants.ROLE_SPECIALISTDOCTOR);
        if (success) {
            Email.sendPasswordNotification(this.name, this.email, password);

        }
        return success;
    }

    /**
     * @return A string with the format "Employee: ID=  employeeID, name= name, address=  address, phonenumber= phonenumber, email= email, SOC= SOC, Role= role, DoctorIndexNumber= DoctorIndexNumber"
     */
    @Override
    public String toString() {
        return super.toString() + ", DoctorIndexNumber=" + DoctorIndexNumber;
    }
}
